Update for deprecation of getThreadById in java.